syntax = "proto3";

package loan;

option go_package = "Backend/created_proto/loan";

service LoanService {
  rpc ApplyForLoan (LoanRequest) returns (LoanResponse);
  rpc GetLoanStatus (LoanStatusRequest) returns (LoanStatusResponse);
  rpc GetLoanApplicationDetails (LoanApplicationRequest) returns (LoanApplicationResponse);
  rpc GetAllLoanApplications(Empty) returns (LoanApplicationList);
  rpc UpdateApplicationStatus(UpdateApplicationStatusRequest) returns (UpdateApplicationStatusResponse);
  rpc GetLoanStats(Empty) returns (LoanStatsResponse);
}

message LoanRequest {
  uint64 user_id = 1;                // User submitting the loan application
  double loan_amount = 2;            // Amount requested for the loan
  int32 loan_term = 3;               // Loan term in months or years
  string loan_purpose = 4;           // Purpose of the loan
  string employment_status = 5;      // Employment status of the user
  double annual_income = 6;          // User's annual income
  string ssn = 7;                    // User's SSN
  string address = 8;                // User's residential address
}


message LoanResponse {
  uint64 loan_id = 1;                // Unique loan ID
  string status = 2;                  // Loan status (e.g., "Pending", "Approved", "Rejected")
}

message LoanStatusRequest {
  uint64 loan_id = 1;                // Loan ID to get status of
}

message LoanStatusResponse {
  uint64 loan_id = 1;                // Loan ID
  string status = 2;                  // Loan application status
}

message LoanApplicationRequest {
  uint64 loan_id = 1;                // Request details of a specific loan application
}

message LoanApplicationResponse {
  uint64 loan_id = 1;                // Unique loan application ID
  uint64 user_id = 2;                // User ID of the applicant
  string ssn = 3;                    // User's SSN
  string address = 4;                // User's residential address
  double loan_amount = 5;            // Requested loan amount
  string loan_purpose = 6;           // Purpose of the loan
  string employment_status = 7;      // Employment status of the user
  double annual_income = 8;          // User's annual income
  string application_status = 9;     // Application status
  bool credit_report_fetched = 10;   // Whether the credit report has been fetched
  string experian_request_id = 11;   // Experian API request ID
  double dti_ratio = 12;             // Debt-to-Income Ratio (optional field)
  int32 credit_score = 13;           // Credit score
  string created_at = 14;            // Creation date
  string updated_at = 15;            // Last update date
  string deleted_at = 16;            // Date when the loan application was deleted (if applicable)
}

message Empty {}

message LoanApplicationList {
  repeated LoanApplicationResponse applications = 1;
}

message UpdateApplicationStatusRequest {
  uint64 loan_application_id = 1;
  string new_status = 2; // Approved, Rejected, etc.
  string reasoning = 3;
}

message UpdateApplicationStatusResponse {
  string status = 1;
}

message LoanStatsResponse {
  uint32 total_applications = 1;
  uint32 approved = 2;
  uint32 rejected = 3;
  uint32 pending = 4;
}